fail_crate/tests/no_bool_after_const.stderr
error: Expected boolean literal after `const =`.
 --> fail_crate/tests/no_bool_after_const.rs:4:7
  |
4 | #[new(const =)]
  |       ^^^^^^^
