fail_crate/tests/no_bool_after_const.rs
use inew::New;

#[derive(New)]
#[new(const =)]
struct A;

fn main() {}
